tasks-app.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    generation: 1
    labels:
      app: tasks
    name: tasks
  spec:
    tags:
    - from:
        kind: DockerImage
        name: tasks:latest
      name: latest
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: tasks
    name: tasks
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: tasks
      deploymentconfig: tasks
    type: ClusterIP
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: tasks
    name: tasks
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: tasks
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: tasks
    name: tasks
  spec:
    replicas: 1
    selector:
      app: tasks
      deploymentconfig: tasks
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: tasks
          deploymentconfig: tasks
      spec:
        containers:
        - image: tasks
          imagePullPolicy: Always
          name: tasks
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources:
            limits:
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
        restartPolicy: Always
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - tasks
        from:
          kind: ImageStreamTag
          name: tasks:latest
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: BuildConfig
  metadata:
    labels:
      app: tasks
    name: tasks
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: tasks:latest
    source:
      contextDir: .
      git:
        ref: master
        uri: https://github.com/siamaksade/openshift-tasks.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: jboss-eap64-openshift:latest
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: xIFnaXsW28FLcAxAfaxN
      type: GitHub
    - generic:
        secret: NDRtEmXkpINRbkm2kqS9
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
kind: List
